# forge

./: .env.checkly.example  .gitignore  .gitmodules  BDS_DOCUMENTATION_PROTOCOL_v1.md  CLAUDE.md  PORT_REGISTRY.md  README.md  SYSTEM.md  checkly.config.ts  df_local_analytics_plan_set_01_architecture.md  df_local_analytics_plan_set_05_verification_operations_and_governance.md  forge_eval_pack_n_localization_plan_rev1.md  forge_hq_vscode_codex_implementation_package.md  forge_implementation_pack_11_dataforge_cloud_blueprint_2026_04_04.md  forge_math_lane_governance_persistence_replay_and_runtime_contract_v_1_initial.md  forge_plan_set_01_master_execution_map_2026_04_04.md  forge_plan_set_03_dataforge_local_hardening_plan_2026_04_04.md  forge_plan_set_06_cross_repo_gate_rollout_plan_2026_04_04.md  forge_plan_set_07_fa_local_future_execution_bridge_2026_04_04.md  package-lock.json  package.json  tsconfig.contracts.json  tsconfig.json
contracts/forge-contract-core/: .gitignore  CLAUDE.md  README.md  SYSTEM.md  ci_gate.sh  pyproject.toml
contracts/forge-contract-core/forbidden_patterns/: forbidden_patterns.json
contracts/forge-contract-core/forge_contract_core/: __init__.py  canonical_json.py  enums.py  identity.py  (+1 more)
eval-cal-node/: .gitignore  README.md  eval_cal_node_plan_v0_rev3.md  pyproject.toml
eval-cal-node/config/: cal_node_config.json
eval-cal-node/reports/: eval_cal_node_v0_implementation_report.md
eval-cal-node/tests/: helpers.py  test_artifacts.py  test_calibration.py  test_config.py  test_gate3.py  test_gates.py  test_record_schema.py  test_status.py
(+824 files in other folders)
