[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-cal-node"
version = "0.1.0"
description = "Post-implementation calibration node for the Forge Ecosystem"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.10.3",
    "PyYAML>=6.0.1",
]

[project.scripts]
eval-cal-node = "eval_cal_node.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
