[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-contract-core"
version = "0.1.0"
description = "Canonical contract center for the Forge ecosystem proving slice"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_contract_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
